2.2.2 (06.01.2019):

* Improved the error message when ImageMagick exceeds its resources.
  Closes bug #303 (I import djvu. . . when exporting to djvu - failed due to
  black and white images)
* Allow foreground colour of text of OCR output to be themed
* Correct some more vbox() calls left over from gtk+-2
  Closes Debian bug #916011 (Blank dialog - Can't locate object method "vbox")


2.2.1 (06.12.2018):

* Clear OCR output canvas when switching pages
* Ignore trailing whitespace in error messages when filtering them
* Lock initial view of OCR output to image when switching pages
* Fix centering of OCR output when zooming with mouse wheel
* Update to German translation (thanks to Tobias Bannert)
* Update to Czech translation (thanks to Pavel Borecki)


2.2.0 (30.11.2018):

* Check validity of device blacklist regex when applying preferences
* Modify preference "Force new scan job between pages" to only take effect when
  scanning from flatbed. Closes bug #309 (ADF-duplex mode brocken)
* Fixed crash switching frontend option in Edit/Preferences between
  libimage-sane-perl and scanimage.
* Fixed visibility of scan widgets when switching from libimage-sane-perl to
  scanimage.
* Collect all warning and error messages in one dialog.  Closes bugs #309
  (stuck while closing error windows) and #300 (gscan2pdf produces)
* Be more tolerant of errors whilst fetching options.  Closes bug #313
  (Error retreiving scanner options: error getting option 5: invalid argument)
* Use default text if the title of a group of scan options is empty.
* Lock panning of image and OCR output views
* Update to German translation (thanks to Stephan Woidowski)
* Update to Russian translation (thanks to Valerii)


2.1.7 (12.10.2018):

* Report PerlMagick errors to user.
* Add note about checking policy.xml in case of ImageMagick Exception 445.
* Add %De for filename extension to default filenames directives.
* On selecting flatbed, force single-sided unless allow-batch-flatbed is enabled