@@ -321,6 +321,7 @@ t/356_unpaper_corrupt_image.t
 t/357_unpaper_rtl.t
 t/358_unpaper_with_warning.t
 t/371_user_defined.t
+t/3722_user_defined.t
 t/372_user_defined2.t
 t/373_user_defined.t
 t/374_user_defined.t
